--- a/lrec2016.bib
+++ b/lrec2016.bib
@@ -55,11 +55,19 @@ pages ={617--626},
 
 @InProceedings{Hag:Joh:Nok:00,
   author = 	 {Kristin Hagen and Janne Bondi Johannessen and Anders N{\o}klestad},
-  title = 	 {A Constraint-based Tagger for Norwegian},
+  title = 	 {A Constraint-based Tagger for {N}orwegian},
   booktitle =	 {17th Scandinavian Conference in Linguistics},
   pages =	 {31--48},
   year =	 2000
 }
+
+
+
+@MastersThesis{Hohle:16,
+  author = 	 {Petter Hohle},
+  title = 	 {The effect of tag set granularity on parsing performance in {N}orwegian},
+  school = 	 {Dept. of Informatics, University of Oslo},
+  year = 	 2016}
 
 @inproceedings{Iva:Oep:Ovr:12,
   author    = {Angelina Ivanova and  Stephan Oepen and Lilja {\O}vrelid and Dan Flickinger},
@@ -75,7 +83,7 @@ pages ={617--626},
 
 @InProceedings{Joh:Alo:Pla:15,
   author = 	 {Anders Johannsen and H\´{e}ctor Mart\´{i}nez Alonso and Barbara Plank},
-  title = 	 {Universal dependencies for Danish},
+  title = 	 {Universal dependencies for {D}anish},
   booktitle = {Proceedings of Treebanks and Linguistic Theories (TLT14)},
   year = 	 2015}
 
@@ -158,7 +166,7 @@ pages ={617--626},
 }
 
 @inproceedings{Pyy:Kan:Miss:15,
-  title={Universal Dependencies for Finnish},
+  title={{U}niversal {D}ependencies for {F}innish},
   author={Sampo Pyysalo and Jenna Kanerva and Anna Missil{\"a} and Veronika Laippala and Filip Ginter},
   booktitle={Proceedings of the Nordic Conference of Computational Linguistics ({NODALIDA})},
   year={2015}
